--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -90,15 +90,189 @@
    },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'j' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-27ba33485891>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprev_index\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mref_raw\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'hash'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0mlast_hash\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mref_raw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mref_raw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m8365\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mingest_loop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'j' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Error loading JSON on hash: 0e685da8fc17c85c37072253378118f6203f50107b5408d1e262ed41d157abae\n",
+      "Error loading JSON on hash: 00efdc5db1c7e71b338a87559766fbc832c9247f5704073cc711c2ec6f5ab46c\n",
+      "JSON file too large on hash: 00f64da521f55afca37f1b38997f67a9454d40a367d50676b58358937b842add\n",
+      "Error loading JSON on hash: 03e78b8c2e225f45eac45034ef945b167cc328a8be036d73b0b74f4c45b6c62f\n",
+      "Error loading JSON on hash: 03839001dadee12688604edd3d19ec7caba7c5a9f2a52a2e092adb0eff101b05\n",
+      "Path to JSON file does not exist on hash: 040c311e57b8703b44f3afcb358341a8a9f375f322645fc802edf98b08d7ee5d\n",
+      "Error loading JSON on hash: 04337ab08d5d6df940e36ade31301d84860d0295f74f73aafd2af2734b17a283\n",
+      "Path to JSON file does not exist on hash: 054546349f92e6a029031875d53fd7d83bb9d98ff5ec6c05fe90fe98dffb55e5\n",
+      "JSON file too large on hash: 061a3ef702e3cd68e914a05b1a3a5e340d99a3f729a943a8a47e9ebd43bb30a5\n",
+      "Error loading JSON on hash: 1a1bb570529c00194e00964eb9c318ba2e08fd9f18a1499e3bd80098ded234e2\n",
+      "JSON file too large on hash: 1b5b9710f1a912c8cdccb79069cdc4a4ddc8e8e171c5ab263c757b10d205c34f\n",
+      "Error loading JSON on hash: 1c51ac0a2b657d81b1f88df3aa85bc2f532d6cee2fca930680229074a097e73c\n",
+      "Error loading JSON on hash: 1e9f916ed69504c8dd95f5e1f8cedaa53a2d19797ad0b111accf43db7dd83c6a\n",
+      "Path to JSON file does not exist on hash: 2a7da49d08438e20a0cfa7bf451760cea951f9de084e1165d9c4f44c2419843b\n",
+      "Error loading JSON on hash: 2c980058ab0798f4b989110ff457202b80115fb2ca9ceb7a66b9c1b1f398d166\n",
+      "Error loading JSON on hash: 2d373db71940607009e4124c127f70b23a480f3ac42564ea2c739b5d430eccbe\n",
+      "JSON file too large on hash: 2ef05c436a0ae93876734dfc8574de6295424d847d121f7be5ac6768bf34c042\n",
+      "Error loading JSON on hash: 3d93ab11844f3ba82c36d91e948bd72134b6d2f084ac308ca9573705aef40360\n",
+      "Error loading JSON on hash: 3d1917073cea41ec57c4f134c7fc576cdc92ae728a1b464e0537ff544a4c3463\n",
+      "Path to JSON file does not exist on hash: 3dae054f261ce7f622bd5584a2721b536aa12e9e37e16930e6464e4406c2fa22\n",
+      "JSON file too large on hash: 3e02619fba525d8c190c21d86b6c98ac86f6a1f9977adf306cfcac5b03ce9ed0\n",
+      "Error loading JSON on hash: 3f2cd60c4bcf5ef5f907800eb110f4ab501cf7537443947bb238cd04496b7a73\n",
+      "Error loading JSON on hash: 4af7bf251b3452500a063ca4974267d2d0ed83800acf03bd9c6d82123ebe81b1\n",
+      "Error loading URL on hash: 5a716a88702b336dd5a4de5545629f5161e9a62014887de104adebe494fef78a\n",
+      "Error loading JSON on hash: 5ae5f8af212cc239111c43428807803cfebc1848c3c3d316067d5e141520b07b\n",
+      "Error loading JSON on hash: 5b9048a9808babd57fa96ef171b005bbfdf819e64520e400213d1514ebb779df\n",
+      "JSON file too large on hash: 6e3d56ee94c0699a4b5f76d39d0ead9574db4b90933f00765279c815d5ab2cce\n",
+      "Error loading JSON on hash: 7a91f699774f6029de78a673e9454bc1e47981cf3ccae25fe27c227dc0c6cb18\n",
+      "JSON file too large on hash: 7aed51668dd1a06ea0683dda13422f237aa58c9b14a04eadc2981ba144bfc21b\n",
+      "Error loading URL on hash: 7b85db656d0ecfcef6a32f073955be280c9fd12a7676030c2642a9bf2d4ff28f\n",
+      "Error loading JSON on hash: 7ef0134478f2deb32836a48c70760a1e3c7196675054a8fe1e3b81a702395a42\n",
+      "Error loading JSON on hash: 7f3b99e6873d3aa44bfd49b50d53e83577050d4fbb9474bc948fb0fb1d108739\n",
+      "Error loading JSON on hash: 8c81dd30a44e2cf2ae9f4b2212c8e355342d1e8b41f94ee98588b4883db6b1b0\n",
+      "Error loading JSON on hash: 8f18f8abfff9e5a067b37e1ff690d95c49a07195329171bfdff9b02e671d0eab\n",
+      "Error loading JSON on hash: 9afeeea8e9126e40747f20f427955ad51dc52c395c6d2d5409c33de6fe16e01d\n",
+      "Path to JSON file does not exist on hash: 9b0e5cf0dfe8078f818d557a933cb7e302fc79b11d2ad5a638a0c38a170901e8\n",
+      "JSON file too large on hash: 10b89fce9da129b2ee30276b7e24dfab64ffe49216f5c4888d69dc027ac0eefd\n",
+      "Error loading JSON on hash: 18bb51f540e89c15dfcdca77cc37ba90eb3f86bbdab66cac19b2c34ffa4ee9c7\n",
+      "Error loading JSON on hash: 22b8660b3cefe0496296e39c1584ac9d197f20c5ae266cef352e9263ea0dc3fc\n",
+      "Error loading JSON on hash: 22bcbdad24fcb3afb4c6d80223488dd1dbf564f6b8153071f472b5ccc715681d\n",
+      "Error loading JSON on hash: 22db1281ac822b31aa8295ddd8f14c0a3fd74cd8d3f2b1e44544c6598ef3fd4b\n",
+      "Path to JSON file does not exist on hash: 28ad73a3c98736de1d9af57aaa9c192696b98d55bd39d408676ed98c3f115303\n",
+      "Error loading JSON on hash: 29e086bb757805be5ee3626c8aa9e4de6257363ad960f2d4a396ef346304da7f\n",
+      "Error loading JSON on hash: 31aa5ea19fac1e729fbdfd25dd462208289bb0dbca9eab4bcf6c3482aab2e7f3\n",
+      "JSON file too large on hash: 34a1e803966bcbce9abe36bc7ef0cebe1136904771320c06aa0a4f2fb790437d\n",
+      "Error loading JSON on hash: 36f824ba1b383a10758f29bdf701a97c32bcb71cbb742c4a3acab51fe4d8a2af\n",
+      "JSON file too large on hash: 40f9e98964fd5612a0a5950513557cebd04fd923195bbe778add593b8b5ebbb9\n",
+      "JSON file too large on hash: 46c6c909c70a1e4a918d2f0ff6b74087ae1e6b4b8c5bba66d0eaa2c8fbd624ca\n",
+      "Error loading JSON on hash: 48e76fddc6abdf258333cb02d57943a3410dd5d81da14e6b2af27793ba01dfd4\n",
+      "JSON file too large on hash: 52bb8fa3261305339bc60cd2adeb03c5cf8a366ec7dfd25b845b70ae03d33a47\n",
+      "JSON file too large on hash: 64f31df578706330876fd97dc37282369e435d46db2c9113e7904b0c4183be3c\n",
+      "JSON file too large on hash: 75e1191af32fbb92fe46351434cd1c0773d22914479994366344461ce33ebb3b\n",
+      "Error loading JSON on hash: 79e33927f7923a3786b7aec702bd0a2212dfb02b71d274a019f43cb8f2878af6\n",
+      "Path to JSON file does not exist on hash: 82a969585e42832da668cf9db767c2fe8ba8d6892e9dd39c84225036061ad148\n",
+      "JSON file too large on hash: 83cf6df5885c6d739496698c7c4576f65a5cd52edcf8b99ff64dcf4b1179cf58\n",
+      "JSON file too large on hash: 84a3e25ed89f0271741ada3378582704f96e27c9f924717f093bb70119e13465\n",
+      "Error loading JSON on hash: 89fe3c1d5fea48bcf88213c04722de05f38f196ace9f70b47ada9b07bb0d1081\n",
+      "Error loading JSON on hash: 94e23acf78fc6e0df826f4b00724192ebb8379ac79901d37d7b8368eeff79fcf\n",
+      "Error loading JSON on hash: 96a56e52d338ffb2ed4605a19eff0522831445673663322bcce6db6ba9f9045e\n",
+      "Error loading JSON on hash: 143bfb327045a7745ab04e3e50698c5b7916a2bafb08513ef6fd33a7f7719702\n",
+      "Error loading JSON on hash: 170bdf3e33336b93b0c9f52ead2dabffb283e5cf701c59ca15bd029fcd4459bc\n",
+      "Error loading JSON on hash: 258af76f1324784e7164e716d64250b3d8c0df19f767654fe897fee5c1cd1fbd\n",
+      "Path to JSON file does not exist on hash: 278b13cbc8a77396ff7e289f037e7c9a24a5dc0900d27d45367dcc639cf77393\n",
+      "JSON file too large on hash: 315e29c580f1720dfc0f7ef7d48beeb3321f3bf343646e022420af119ad7a370\n",
+      "Error loading URL on hash: 353e09ea71daccfb7f2bf2f1007c90b28620207878def243749223cb3d0b18c2\n",
+      "Error loading JSON on hash: 379b47e43c21ea932499f859d67161078f8f326ff622636e547087f5679a2d74\n",
+      "Error loading JSON on hash: 462c552fd896d42db53291330ebb60233a4f27c08aec9beaabedc2f05ae77406\n",
+      "JSON file too large on hash: 603bb8b8f59a99ef2c266983b137fd0930ac160208c996f0012984cfcfeb8567\n",
+      "Error loading JSON on hash: 632f41b8dfb8d39ba770812833fe51de86de1810b2e641e52c9be79f06536009\n",
+      "Error loading JSON on hash: 676f985d8eda398085a043e2ae7f55390a34029b831e9b25a991d5d2c1b1353b\n",
+      "JSON file too large on hash: 773ad258254f32e4ea727025db08cf9f7b5c88bdf68d49054bc7699dab0d0018\n",
+      "JSON file too large on hash: 870bf6813341fd60c935fbb8942c32383d11955a0588e9f2289f6c579ab90eb9\n",
+      "Path to JSON file does not exist on hash: 889a15f37fc6a4757f74e8d4e1fb87e247c4462a9ca0d353488bd4a5485ea855\n",
+      "Error loading JSON on hash: 898de6a6d568442a348972d6004346e9f353ff5b398f1c72ef61a61e9406c935\n",
+      "JSON file too large on hash: 994cc2e6cf3f7245743a05240ee9a546bac29aed22b7a507bc9e57ab2b454b06\n",
+      "Error loading JSON on hash: 2694d23d0851a7535887affdc4443b24555c9afc99464b7fdf4199a57ff9e9f6\n",
+      "JSON file too large on hash: 2906e9da51e32c9cacba84162ec2ee3f4f0bf63523742cd076af7be0aef8b033\n",
+      "Path to JSON file does not exist on hash: 6473fe78c74d02f9be150808e2c1e33cb41ef3695d985f45ac379160e4aba3b2\n",
+      "JSON file too large on hash: 6725dfc3cb9b8f2103ebb129f0d4816ae836c15103229e8fda0151aa390d33ad\n",
+      "Error loading JSON on hash: 7609b3bd79c2642d622a0c840fe4c14b59b5dfe785cbc1159e12f6fe8ba6999e\n",
+      "Error loading JSON on hash: 8413fabf6fef56a9e77246d8e36759282392b4571bf69f54f7e0c58d01ac8a70\n",
+      "Path to JSON file does not exist on hash: 9905e62f882518f1d43b6e7715dda9d654fc0e9afbffc4015136ad4977360f55\n",
+      "JSON file too large on hash: 10432cd1c2ed3a54624bd21c6ff57ee48e6d558cb57cb249f27a6a777f124fc0\n",
+      "Error loading URL on hash: 48126cc7d2d43e78e38be344740808944c1c989e36b0d2cc1a349e0038d5a6f8\n",
+      "JSON file too large on hash: 60317f725b5d42682586165d99bd3f9d79a3773709e82d1eea8912cd13aa6a82\n",
+      "JSON file too large on hash: 80679eeed58457733de9644bcea359f769f5234e42460c51236087dec6742276\n",
+      "Error loading JSON on hash: 84126e37e133e110901d1e46897180cffd59215bb4ff035cc5ac805aa4148710\n",
+      "Path to JSON file does not exist on hash: 152012a43a0c6668c1a4929c3489fa37038b1760f5a4ac7fcf7133786a1be9e2\n",
+      "JSON file too large on hash: 680855b8b5d262cccfdcb27dcf86164eea8f3aa16cfed2b74b662219d5dd432a\n",
+      "JSON file too large on hash: 784315c43479e4dff32e4e5607e697a27510b49de597d47e2b798cf3c974ec59\n",
+      "Error loading JSON on hash: 845570ceffeeb13fcabb697c790619045e9aea431b17514c1369fff07a0f7281\n",
+      "Error loading JSON on hash: 1642288aed223b1aba250b6f1db7a89c16c6e8d656c7fd002437947c930c094f\n",
+      "Path to JSON file does not exist on hash: 2368939a9bd91527dc5a573168678e130038baa6cd180140b3a106f4f8149180\n",
+      "Error loading JSON on hash: 4951131da6682276da6ef866aa5929d7b0e854f2e95442642934dc810c271331\n",
+      "Error loading JSON on hash: 998711859fa979bb06409b22495c01222b98ed0b15d6d910ae7d78344d69a558\n",
+      "Error loading JSON on hash: 4410373382d46d3e58d5f5816a502c56c3116dbc4b71b117f0bad5a26cfcf705\n",
+      "Path to JSON file does not exist on hash: a03eaf0e02f921fc431e18fee373923085f5f63eb3c85f854db67d167a0d8ae1\n",
+      "Path to JSON file does not exist on hash: a68d47a6f23e629318ea3fc5144d34c931fe0813d99a29471b7287097aadc2cc\n",
+      "JSON file too large on hash: a77f8566d587e7bf3294a7951608d0a29687dcc7c00083af9426e5424df31c58\n",
+      "Error loading JSON on hash: a662e7f40884ad4d9b1d61634756e748ceee6a73b1e5332aa68c62bebe8f9df8\n",
+      "Error loading JSON on hash: a834ee00fe2a52933ca721c0e70b67807d0124dc99e30765846946bc4dfd01eb\n",
+      "Error loading JSON on hash: a92920dc34c7960a5a7051ea7c54524e47a9eeb199b15c3f12866ecf9a73cd2e\n",
+      "Error loading JSON on hash: a550305b968c0675c4043617f492c04920ca2e35069bd948c30d6ff347fbad34\n",
+      "Error loading JSON on hash: aa67ab97494aac027435cac1fc8d424af7cf6efff1d700d50f6be10636771011\n",
+      "Error loading JSON on hash: adf9ba3a62f3f700f1fc1231af0a8fb0862c6c0ba074381a8fcbd53005341437\n",
+      "Path to JSON file does not exist on hash: ae15f1f8dbddd08b9ff58b3d57e480ef1ba7bf9db190d8653714039adff449d5\n",
+      "JSON file too large on hash: b9eff0faf622ac30487b2fdd96d7fa6a1c0f6a9bd910d07f6736f0028e41a3a1\n",
+      "Path to JSON file does not exist on hash: b78e2b5465e9e39cdd4a972dbcfa7bf57ba0bb0dad439b61cd28f1490f481058\n",
+      "Error loading JSON on hash: b6732a57b1f35651651164280b37f0330e4f461894ee4528615c67db658f87d5\n",
+      "Error loading JSON on hash: b1698885c3d85e3c6f7e2ab94751dc394c0eb08f17093a9d7327fded76d1e0a3\n",
+      "JSON file too large on hash: bb3db0e28a377c56b92f1c9e9afa833c03de130ba6e3fc6d178bd4325b5907a7\n",
+      "Error loading JSON on hash: bbe9e4ee2f1712daa66baaf3f1f81c604067d42a3cb9721e7deffc3eb7c4948c\n",
+      "Error loading JSON on hash: c07ab3c4f715af1cbffffb351560f456e28f7b1b4289fbd87412fa318e0c5e95\n",
+      "JSON file too large on hash: c2c79663d70b14cb3ec0aa0cba48de4f04fad73e2de3bcbf912113ce2e630024\n",
+      "Error loading JSON on hash: c9ac522b0b81ee44b95381685e92d5477630070e8b7c97ec15b2206c5a9cba6e\n",
+      "Error loading JSON on hash: c9f4e3bf7056dd39563bdf60c2c10596cf78ad76afdebe9976d821eaf5c75fd5\n",
+      "Error loading JSON on hash: c96f1952e96b590c60f7ad26937b409e58b023659cfaf6936d3bec0b11f52dab\n",
+      "JSON file too large on hash: c612df3d23185a7783e1cb87578f9f1bfdd94e97648580f79f6ab80c00250e3b\n",
+      "Error loading JSON on hash: c3202b34fbb033294eeef04b6b0a8c5705e6a365554b77b762b0429a9881b7c8\n",
+      "Path to JSON file does not exist on hash: cb4fcf735cb8c4741b1dcd744ea3e49a2061094e403205890416da9ea6edacbd\n",
+      "Error loading JSON on hash: cc4f21345a633f6f113c9fdb8c32e5be765352063d9a44c381e099867fb408f7\n",
+      "JSON file too large on hash: cd6ec6506066b609f782748b33d785e3f95df844289b23df21694266d3fd9993\n",
+      "JSON file too large on hash: cf6a42d86412db1712448c895b173e91e8f452a0bbb3b9a4afbbacab02157c36\n",
+      "Error loading JSON on hash: d1ae6111ec53bf92f1d2ce5e5e48d83526d7b633f6b2dd3ff32e1f98f27c7bce\n",
+      "Error loading JSON on hash: d4af12b8467f2195a67508729252d38bb097525d26c1c23e70d16b7b84b93ad5\n",
+      "Error loading JSON on hash: d8ab7e4d3bb6424f9a6f5fe03c88764c954773586c0bdec65a5f6d0db9ea037c\n",
+      "Error extracting on hash: d9a4584d1432e9c3f823f7944f1c276fca07ee90ccc5c9046f0fcf0bcc524742\n",
+      "Error loading JSON on hash: d19f0006cbf9b184e29130f358dae000f5591bf25a8d272aeb0bc97bb0a40197\n",
+      "Error loading JSON on hash: d42b992ea1a000192e0358a7218f02032b4882f4f366c942bd1b51b34ca207cd\n",
+      "Error loading JSON on hash: d72f526e28d51c6b841578fe7e8e1d83a98e637fc1f80dadea265ef8de554f2e\n",
+      "JSON file too large on hash: d2588ff4362c7532a31beea1acbe156cc8ff63fc571387c9954b09bfcd3ab2a2\n",
+      "JSON file too large on hash: d7423dd1796be0b12318ceecd0ee2334c1a184f5bd5bec9ba6b8f069d24b82e0\n",
+      "Path to JSON file does not exist on hash: d18033d48601e3c97d21e97bdc89d1253729069d8cae91f1d54aa8ef522b109d\n",
+      "JSON file too large on hash: d670844a98334f595fe07a82fed2c2a11ab8701a2189d5b997e31e3708ae325d\n",
+      "Error loading JSON on hash: dc671acbf7c0e6b3270e63a75ba1f03b6b667df24e671d57ab8a23a400badb8c\n",
+      "JSON file too large on hash: dd4bc1beb82a1bd7fce037a2ab5ad053404598947ad75e0f6ef82ab0649419ab\n",
+      "Error loading JSON on hash: ddcbbae29557d2adb7f769d9eee7dd4bbed1afa80bd53d8f779299dce70aa76a\n",
+      "JSON file too large on hash: dde70d4fbc9dd72d700a95c8de6980940b9bd2455e26c5aec7781846ad5e6953\n",
+      "JSON file too large on hash: de14ed2bfef936520ccbe94f2765107a2e00927235d72beed6b5bcdf5faade22\n",
+      "Path to JSON file does not exist on hash: df869a4e2491dfd6afa5722447460dc2b7879d89a1f835d06b249d1d25dbbcb6\n",
+      "JSON file too large on hash: e9b15f2284c732ea32dacff3bb7a9e43234fd792248e4e303944fa9b9451db1b\n",
+      "JSON file too large on hash: e59ad625aca8b0f8750043de2c8113a511e342d5b5e86505c7d4fba341a2c4d9\n",
+      "Error loading JSON on hash: ebd0e5816b4cd4252a94a7700a3431a5fc0e1d6fe1eb36a198064afcb533ab82\n",
+      "JSON file too large on hash: ec372423b3d933ec972aadccd75dca256d8f9843dd49e80516e5de0fba12cc60\n",
+      "Error loading JSON on hash: f0c343eeb0c1461704ca5730019b76a67d1380029551928eac53584af2d924c3\n",
+      "JSON file too large on hash: f0257b5a5245f0e1493e78d856972431711ddc8ccbbb460b22a05aef0a00f30c\n",
+      "JSON file too large on hash: f1a7a94be91c43083d37a0cdac253e43ecbc600709cfbf54e79dc25ce099e25e\n",
+      "Error loading JSON on hash: f2a35b792e45662310f7e3444ce43efb55c3c612e3a82ccb10c19435982a6a0f\n",
+      "Path to JSON file does not exist on hash: f5f193432967ad62a6a6e76932a8eae1882a1769f5a075ba92f4e86d77d49c7c\n",
+      "Error loading JSON on hash: f22df783d74922045755f8b5abcdfadcc8c3f23589343b362e81d97fa62b54a4\n",
+      "Path to JSON file does not exist on hash: f48e1da37d5b012a701418689a911bd753eeb37d03f357ca3c6666fb3e8c233a\n",
+      "JSON file too large on hash: f61c2cbffc3b3db4093107775f298ff7f25d4deb893de561fcca05b5ad453d36\n",
+      "JSON file too large on hash: f81cacc7ee92719c6307240c586a70efdbd2cf4faf99b08a9829e58fc47b4f98\n",
+      "JSON file too large on hash: f99e8089185691b10153e3ae7fc5ef82487f29e58cbe2ddb8e62a27fd4f069cd\n",
+      "JSON file too large on hash: fc901b0f9a953880a110993795a95e2dc7640ae17d6f669cf231f4c8e94c110a\n",
+      "Error loading JSON on hash: fc8526ffab9948bc3e22258df601b140df8ff790664d4863a181b36497868162\n",
+      "JSON file too large on hash: fd018e617ed698b647f68a53f204e4023a82955b665abcb68bd2a8f2a450bcf8\n",
+      "JSON file too large on hash: ffd7935393ffb9c8a6fb1f3932a0fbcfd0295172bff3f4c333f4cd704fcab398\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "9139     None\n",
+       "9140     None\n",
+       "9141     None\n",
+       "9142     None\n",
+       "9143     None\n",
+       "         ... \n",
+       "13071    None\n",
+       "13072    None\n",
+       "13073    None\n",
+       "13074    None\n",
+       "13075    None\n",
+       "Length: 3937, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
     }
    ],
    "source": [
@@ -169,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
