Minor changes to tokenization nb

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -91,15 +91,15 @@
     "    # Arguments for `wordpiece_vocab.wordpiece_tokenizer_learner_lib.learn`\n",
     "    learn_params={},\n",
     ")\n",
+    "# DEFUNCT: Commented out to avoid long runtime\n",
+    "# test_vocab = bert_vocab.bert_vocab_from_dataset(\n",
+    "#     train_data.batch(1).prefetch(1),\n",
+    "#     **bert_vocab_args\n",
+    "# )\n",
     "\n",
-    "test_vocab = bert_vocab.bert_vocab_from_dataset(\n",
-    "    train_data.batch(1).prefetch(1),\n",
-    "    **bert_vocab_args\n",
-    ")\n",
-    "\n",
-    "with open('test_vocab_1fee4933c984a9b69721388f1f29802fb64866cbb10f59591ccf534774bfe2ee.txt', 'w') as f:\n",
-    "    for token in test_vocab:\n",
-    "        print(token, file=f)"
+    "# with open('test_vocab_1fee4933c984a9b69721388f1f29802fb64866cbb10f59591ccf534774bfe2ee.txt', 'w') as f:\n",
+    "#     for token in test_vocab:\n",
+    "#         print(token, file=f)"
    ]
   },
   {
