--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,7 @@
     "import os\n",
     "import json \n",
     "import numpy as np\n",
-    "import tensorflow_text as text\n",
-    "import time"
+    "import tensorflow_text as text"
    ]
   },
   {
@@ -55,8 +54,15 @@
    "metadata": {}
   },
   {
+   "source": [
+    "Testing with different vocabulary length yielded mixed results where it was sometimes able to effectively pick out pertinent tokens but mostly fixated on smaller tokens found in the structure of the JSON file or behavior parameters, most of which being unnecessary. A custom algorithm or reference dictionary will likely need to be developed."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,16 +71,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = tf.data.TextLineDataset(str('riskware\\\\1fee4933c984a9b69721388f1f29802fb64866cbb10f59591ccf534774bfe2ee\\\\sample_for_analysis.apk.json'))"
+    "# Takes rand sample of data to form test dataset for dict building\n",
+    "\n",
+    "# adware_sample = np.random.randint(0, high=887, size=(1,15))\n",
+    "# banking_sample = np.random.randint(0, high=2049, size=(1,15))\n",
+    "# riskware_sample = np.random.randint(0, high=2374, size=(1,15))\n",
+    "# sms_sample = np.random.randint(0, high=3853, size=(1,15))\n",
+    "\n",
+    "# sample_mat = np.concatenate((adware_sample, banking_sample), axis=0)\n",
+    "# sample_mat = np.concatenate((sample_mat, riskware_sample), axis=0)\n",
+    "# sample_mat = np.concatenate((sample_mat, sms_sample), axis=0)\n",
+    "\n",
+    "# dir_list = ['adware', 'banking', 'riskware', 'sms']\n",
+    "\n",
+    "# train_data = tf.data.TextLineDataset(str('adware\\\\' + os.listdir('adware')[sample_mat[0,0]] + '\\\\sample_for_analysis.apk.json'))\n",
+    "\n",
+    "# for sample_dir in dir_list: \n",
+    "#     mat_index = 0\n",
+    "#     sample_list = os.listdir(sample_dir)\n",
+    "#     for rand_ind in sample_mat[mat_index,0:]:\n",
+    "#         train_data.concatenate(tf.data.TextLineDataset(str(sample_dir + '\\\\' + sample_list[rand_ind] + '\\\\sample_for_analysis.apk.json')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +108,7 @@
     "\n",
     "bert_vocab_args = dict(\n",
     "    # The target vocabulary size\n",
-    "    vocab_size = 500,\n",
+    "    vocab_size = 800,\n",
     "    # Reserved tokens that must be included in the vocabulary\n",
     "    reserved_tokens=reserved_tokens,\n",
     "    # Arguments for `text.BertTokenizer`\n",
@@ -91,23 +116,24 @@
     "    # Arguments for `wordpiece_vocab.wordpiece_tokenizer_learner_lib.learn`\n",
     "    learn_params={},\n",
     ")\n",
-    "# DEFUNCT: Commented out to avoid long runtime\n",
+    "\n",
     "# test_vocab = bert_vocab.bert_vocab_from_dataset(\n",
-    "#     train_data.batch(1).prefetch(1),\n",
+    "#     train_data.shuffle(45).batch(45).prefetch(2),\n",
     "#     **bert_vocab_args\n",
     "# )\n",
     "\n",
-    "# with open('test_vocab_1fee4933c984a9b69721388f1f29802fb64866cbb10f59591ccf534774bfe2ee.txt', 'w') as f:\n",
+    "# with open('test_vocab_rand_sample.txt', 'w') as f:\n",
     "#     for token in test_vocab:\n",
     "#         print(token, file=f)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Custom Tokenization\n",
+    "Due to the apparent underperformance of pre-built models"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
