exploration of high level features

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -77,24 +77,29 @@
    "source": [
     "# Takes rand sample of data to form test dataset for dict building\n",
     "\n",
-    "# adware_sample = np.random.randint(0, high=887, size=(1,15))\n",
-    "# banking_sample = np.random.randint(0, high=2049, size=(1,15))\n",
-    "# riskware_sample = np.random.randint(0, high=2374, size=(1,15))\n",
-    "# sms_sample = np.random.randint(0, high=3853, size=(1,15))\n",
+    "adware_sample = np.random.randint(0, high=887, size=(1,50))\n",
+    "banking_sample = np.random.randint(0, high=2049, size=(1,50))\n",
+    "riskware_sample = np.random.randint(0, high=2374, size=(1,50))\n",
+    "sms_sample = np.random.randint(0, high=3853, size=(1,50))\n",
     "\n",
-    "# sample_mat = np.concatenate((adware_sample, banking_sample), axis=0)\n",
-    "# sample_mat = np.concatenate((sample_mat, riskware_sample), axis=0)\n",
-    "# sample_mat = np.concatenate((sample_mat, sms_sample), axis=0)\n",
+    "sample_mat = np.concatenate((adware_sample, banking_sample), axis=0)\n",
+    "sample_mat = np.concatenate((sample_mat, riskware_sample), axis=0)\n",
+    "sample_mat = np.concatenate((sample_mat, sms_sample), axis=0)\n",
     "\n",
-    "# dir_list = ['adware', 'banking', 'riskware', 'sms']\n",
+    "dir_list = ['adware', 'banking', 'riskware', 'sms']\n",
     "\n",
     "# train_data = tf.data.TextLineDataset(str('adware\\\\' + os.listdir('adware')[sample_mat[0,0]] + '\\\\sample_for_analysis.apk.json'))\n",
     "\n",
+    "# mat_index = 0\n",
     "# for sample_dir in dir_list: \n",
-    "#     mat_index = 0\n",
     "#     sample_list = os.listdir(sample_dir)\n",
-    "#     for rand_ind in sample_mat[mat_index,0:]:\n",
-    "#         train_data.concatenate(tf.data.TextLineDataset(str(sample_dir + '\\\\' + sample_list[rand_ind] + '\\\\sample_for_analysis.apk.json')))"
+    "#     if sample_dir is 'adware':\n",
+    "#         start_index = 1\n",
+    "#     else:\n",
+    "#         start_index = 0\n",
+    "#     for rand_ind in sample_mat[mat_index,start_index:]:\n",
+    "#         train_data.concatenate(tf.data.TextLineDataset(str(sample_dir + '\\\\' + sample_list[rand_ind] + '\\\\sample_for_analysis.apk.json')))\n",
+    "#     mat_index += 1"
    ]
   },
   {
@@ -103,19 +108,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bert_tokenizer_params=dict(lower_case=True)\n",
-    "reserved_tokens=[\"[PAD]\", \"[UNK]\", \"[START]\", \"[END]\"]\n",
+    "# bert_tokenizer_params=dict(lower_case=True)\n",
+    "# reserved_tokens=[\"[PAD]\", \"[UNK]\", \"[START]\", \"[END]\"]\n",
     "\n",
-    "bert_vocab_args = dict(\n",
-    "    # The target vocabulary size\n",
-    "    vocab_size = 800,\n",
-    "    # Reserved tokens that must be included in the vocabulary\n",
-    "    reserved_tokens=reserved_tokens,\n",
-    "    # Arguments for `text.BertTokenizer`\n",
-    "    bert_tokenizer_params=bert_tokenizer_params,\n",
-    "    # Arguments for `wordpiece_vocab.wordpiece_tokenizer_learner_lib.learn`\n",
-    "    learn_params={},\n",
-    ")\n",
+    "# bert_vocab_args = dict(\n",
+    "#     # The target vocabulary size\n",
+    "#     vocab_size = 800,\n",
+    "#     # Reserved tokens that must be included in the vocabulary\n",
+    "#     reserved_tokens=reserved_tokens,\n",
+    "#     # Arguments for `text.BertTokenizer`\n",
+    "#     bert_tokenizer_params=bert_tokenizer_params,\n",
+    "#     # Arguments for `wordpiece_vocab.wordpiece_tokenizer_learner_lib.learn`\n",
+    "#     learn_params={},\n",
+    "# )\n",
     "\n",
     "# test_vocab = bert_vocab.bert_vocab_from_dataset(\n",
     "#     train_data.shuffle(45).batch(45).prefetch(2),\n",
@@ -130,7 +135,102 @@
   {
    "source": [
     "## Custom Tokenization\n",
-    "Due to the apparent underperformance of pre-built models"
+    "Due to the apparent underperformance of pre-built models in deriving their own dictionaries, a custom method is required. The goal of this process is to derive reusable tokens and preserve the contextual, nested structure of the JSON file. We will do this by iteratively extracting tokens from a random sample until no meaningful (frequent) tokens remain."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#grabs rand sample from mat above\n",
+    "sample_data = []\n",
+    "\n",
+    "mat_index = 0\n",
+    "for sample_dir in dir_list: \n",
+    "    sample_list = os.listdir(sample_dir)\n",
+    "    for rand_ind in sample_mat[mat_index,0:]:\n",
+    "        with open(sample_dir + '\\\\' + sample_list[rand_ind] + '\\\\sample_for_analysis.apk.json') as sample_file:\n",
+    "            sample_data.append(sample_file.read().replace(\"\\n\", \" \"))\n",
+    "    mat_index += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(array(['arguments', 'class', 'classType', 'interface', 'interfaceGroup',\n       'low', 'method', 'operationFlags', 'procname', 'subclass', 'tid'],\n      dtype='<U14'), array([  28676, 6333770,   63079,   28676,   28676, 6333770,   28676,\n         55629,   75312,   13429,   75312], dtype=int64))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# See the frequency of all high level keys\n",
+    "high_keys = []\n",
+    "\n",
+    "for sample in sample_data:\n",
+    "    sample_json = json.loads(sample)['behaviors']['dynamic']['host']\n",
+    "    for behavior in sample_json:\n",
+    "        for key in behavior.keys():\n",
+    "            high_keys.append(key)\n",
+    "\n",
+    "uniq_keys, key_frequency = np.unique(high_keys, return_counts=True)"
+   ]
+  },
+  {
+   "source": [
+    "### High Level Tokens\n",
+    "Inspection of high-level keys in a random sample revealed 11 keys\n",
+    "* class\n",
+    "* classType\n",
+    "* interface\n",
+    "* interfaceGroup\n",
+    "* method\n",
+    "* operationFlags\n",
+    "* procname\n",
+    "* subclass\n",
+    "* tid\n",
+    "* low\n",
+    "* arguments\n",
+    "#\n",
+    "Of these 11, low contains lower-level features. tid and arguments will likely not be used as tokens."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# See the frequency of low-level tokens\n",
+    "for sample in sample_data:\n",
+    "    sample_json = json.loads(sample)['behaviors']['dynamic']['host']\n",
+    "    for behavior in sample_json:\n",
+    "        for key in behavior.keys():\n",
+    "            high_keys.append(key)"
+   ]
+  },
+  {
+   "source": [
+    "# uniq, counts = np.unique(value_list, return_counts=True)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 7,
+   "outputs": []
+  },
+  {
+   "source": [
+    "## ID and TS Features"
    ],
    "cell_type": "markdown",
    "metadata": {}
