low-level token analysis

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.7-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -167,7 +167,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(array(['arguments', 'class', 'classType', 'interface', 'interfaceGroup',\n       'low', 'method', 'operationFlags', 'procname', 'subclass', 'tid'],\n      dtype='<U14'), array([  28676, 6333770,   63079,   28676,   28676, 6333770,   28676,\n         55629,   75312,   13429,   75312], dtype=int64))\n"
+      "['arguments' 'class' 'classType' 'interface' 'interfaceGroup' 'low'\n 'method' 'operationFlags' 'procname' 'subclass' 'tid']\n[  21036 4805170   64309   21036   21036 4805170   21036   56733   71113\n   10006   71113]\n"
      ]
     }
    ],
@@ -181,7 +181,9 @@
     "        for key in behavior.keys():\n",
     "            high_keys.append(key)\n",
     "\n",
-    "uniq_keys, key_frequency = np.unique(high_keys, return_counts=True)"
+    "uniq_keys, key_frequency = np.unique(high_keys, return_counts=True)\n",
+    "print(uniq_keys)\n",
+    "print(key_frequency)"
    ]
   },
   {
@@ -207,16 +209,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['blob' 'id' 'methodName' 'method_name' 'parameters' 'read fd' 'socket fd'\n 'sysname' 'ts' 'type' 'write fd' 'xref']\n[ 685381 5426236   21036    6804 4713021    2109    1102 5405200 5426236\n 5426236    2109  618406]\n"
+     ]
+    }
+   ],
    "source": [
     "# See the frequency of low-level tokens\n",
+    "low_keys = []\n",
     "for sample in sample_data:\n",
     "    sample_json = json.loads(sample)['behaviors']['dynamic']['host']\n",
     "    for behavior in sample_json:\n",
-    "        for key in behavior.keys():\n",
-    "            high_keys.append(key)"
+    "        for low_behavior in behavior['low']:\n",
+    "            for key in low_behavior.keys():\n",
+    "                low_keys.append(key)\n",
+    "\n",
+    "uniq_keys, key_frequency = np.unique(low_keys, return_counts=True)\n",
+    "print(uniq_keys)\n",
+    "print(key_frequency)"
    ]
   },
   {
