Explored lowest tokens, started token extraction

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,8 @@
     "import os\n",
     "import json \n",
     "import numpy as np\n",
-    "import tensorflow_text as text"
+    "import tensorflow_text as text\n",
+    "import ast"
    ]
   },
   {
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +153,7 @@
     "mat_index = 0\n",
     "for sample_dir in dir_list: \n",
     "    sample_list = os.listdir(sample_dir)\n",
-    "    for rand_ind in sample_mat[mat_index,0:]:\n",
+    "    for rand_ind in sample_mat[mat_index, 0:]:\n",
     "        with open(sample_dir + '\\\\' + sample_list[rand_ind] + '\\\\sample_for_analysis.apk.json') as sample_file:\n",
     "            sample_data.append(sample_file.read().replace(\"\\n\", \" \"))\n",
     "    mat_index += 1"
@@ -160,17 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['arguments' 'class' 'classType' 'interface' 'interfaceGroup' 'low'\n 'method' 'operationFlags' 'procname' 'subclass' 'tid']\n[  21036 4805170   64309   21036   21036 4805170   21036   56733   71113\n   10006   71113]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# See the frequency of all high level keys\n",
     "high_keys = []\n",
@@ -181,9 +174,9 @@
     "        for key in behavior.keys():\n",
     "            high_keys.append(key)\n",
     "\n",
-    "uniq_keys, key_frequency = np.unique(high_keys, return_counts=True)\n",
-    "print(uniq_keys)\n",
-    "print(key_frequency)"
+    "high_uniq_keys, high_frequency = np.unique(high_keys, return_counts=True)\n",
+    "print(high_uniq_keys)\n",
+    "print(high_frequency)"
    ]
   },
   {
@@ -202,24 +195,16 @@
     "* low\n",
     "* arguments\n",
     "#\n",
-    "Of these 11, low contains lower-level features. tid and arguments will likely not be used as tokens."
+    "Of these 11, low contains lower-level features as a list of dicts. arguments contains a list of strings"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['blob' 'id' 'methodName' 'method_name' 'parameters' 'read fd' 'socket fd'\n 'sysname' 'ts' 'type' 'write fd' 'xref']\n[ 685381 5426236   21036    6804 4713021    2109    1102 5405200 5426236\n 5426236    2109  618406]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# See the frequency of low-level tokens\n",
     "low_keys = []\n",
@@ -230,9 +215,129 @@
     "            for key in low_behavior.keys():\n",
     "                low_keys.append(key)\n",
     "\n",
-    "uniq_keys, key_frequency = np.unique(low_keys, return_counts=True)\n",
-    "print(uniq_keys)\n",
-    "print(key_frequency)"
+    "low_uniq_keys, low_frequency = np.unique(low_keys, return_counts=True)\n",
+    "print(low_uniq_keys)\n",
+    "print(low_frequency)"
+   ]
+  },
+  {
+   "source": [
+    "### Low Level Tokens\n",
+    "Inspection of high-level tokens in a random sample revealed 12 keys\n",
+    "* blob\n",
+    "* id\n",
+    "* methodName\n",
+    "* method_name\n",
+    "* parameters\n",
+    "* read fd\n",
+    "* socket fd\n",
+    "* sysname\n",
+    "* ts \n",
+    "* type\n",
+    "* write fd\n",
+    "* xref\n",
+    "#\n",
+    "blob and parameters contain lowest-level features, where blob is a dict as a string and contains formatting abnormalities, it can also contain a normal string. parameters is a list of strings and/or ints\n",
+    "# \n",
+    "methodName and method_name differ where the former seems to be used in the context of a BINDER class. The latter seems exclusive to the ACCESS PERSONAL INFO class, but still with type binder"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# See the frequency of low-level tokens\n",
+    "lowest_keys = []\n",
+    "for sample in sample_data:\n",
+    "    sample_json = json.loads(sample)['behaviors']['dynamic']['host']\n",
+    "    for behavior in sample_json:\n",
+    "        for low_behavior in behavior['low']:\n",
+    "            for key in low_behavior.keys():\n",
+    "                if key == 'blob':\n",
+    "                    string_dict = low_behavior['blob']\n",
+    "                    if type(string_dict) is dict:\n",
+    "                        for lowest_key in string_dict.keys():\n",
+    "                            lowest_keys.append(lowest_key)\n",
+    "                    else:\n",
+    "                        string_dict = string_dict.replace(\"L,\", \",\")\n",
+    "                        string_dict = string_dict.replace(\"L}\", \"}\")\n",
+    "                        string_dict = string_dict.replace(\"u\\'\", \"\\'\")\n",
+    "                        string_dict = string_dict.replace(\"\\'\", \"\\\"\")\n",
+    "                        try:\n",
+    "                            string_dict = ast.literal_eval(string_dict)\n",
+    "                        except:\n",
+    "                            pass\n",
+    "                        if type(string_dict) is dict:\n",
+    "                            for lowest_key in string_dict.keys():\n",
+    "                                lowest_keys.append(lowest_key)\n",
+    "\n",
+    "lowest_uniq_keys, lowest_frequency = np.unique(lowest_keys, return_counts=True)\n",
+    "print(lowest_uniq_keys)\n",
+    "print(lowest_frequency)"
+   ]
+  },
+  {
+   "source": [
+    "### Lowest Level Tokens\n",
+    "Keys in blob contained wildly varying frequencies, see the sample output below:\n",
+    "#\n",
+    "['devicename' 'dirname' 'filename' 'flags' 'host' 'mode' 'pid' 'port'\n",
+    " 'query_data' 'returnValue' 'size' 'socket domain' 'socket protocol'\n",
+    " 'socket type' 'status' 'tid' 'type']\n",
+    " #\n",
+    "[215011   1163 650182  58849   3282  60002   8869   3282    123   3282\n",
+    " 530656   5927   5927   5927   2277   8869   5506]\n",
+    " #\n",
+    "I'm not entirely sure how much this data will be explicitly tokenized by a custom algorithm. There are many many inconsistencies in the parsing of the string into JSON that causes it to throw out a lot of values. This could likely be compensated for, but in the interest of time it may be better to avoid it and explore the useage of a pre-built algo on the string, like what is planned for parameters and arguments."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Token Extraction\n",
+    "With high and low level keys extracted, the next step of building the tokens is to look at the number and distribution of possible values for each token. This will be done by making a dataframe for each unique key with the key being the col and each observed value as the rows. The dataframe will then be made into a piechart with matplotlib and saved to jpg for inspection with a caption containing the number of unique values.\n",
+    "#\n",
+    "Excluded keys:\n",
+    "* parameters\n",
+    "* id\n",
+    "* blob\n",
+    "* xref\n",
+    "* ts \n",
+    "* arguments\n",
+    "* tid\n",
+    "#\n",
+    "These will be excluded from tokenization as they are identifiers and/or contain lists or dicts not for explicit tokenization."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exclude_keys = ['parameters', 'id', 'blob', 'xref', 'ts', 'arguments', 'tid']\n",
+    "\n",
+    "for sample in sample_data:\n",
+    "    sample_json = json.loads(sample)['behaviors']['dynamic']['host']\n",
+    "    for behavior in sample_json:\n",
+    "        for key, value in behavior.items():\n",
+    "            if key not in exclude_keys:\n",
+    "\n",
+    "            else:\n",
+    "                continue\n",
+    "            for low_behavior in behavior['low']:\n",
+    "                for low_key, low_value in low_behavior.items():\n",
+    "                    if low_key not in exclude_keys:\n",
+    "                        \n",
+    "                    else:\n",
+    "                        continue"
    ]
   },
   {
@@ -241,7 +346,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": []
   },
   {
